📦 NEW: Add login page

--- a/src/app/Auth/login/login.page.html
+++ b/src/app/Auth/login/login.page.html
@@ -1,9 +1,12 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>login</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
-
+  <div class="card">
+    <div class="image">
+      <ion-img src="assets/images/face.png"></ion-img>
+    </div>
+    <div class="card-content">
+      <div class="card-title">
+        <h1 class="ion-no-margin">Authentification</h1>
+      </div>
+    </div>
+  </div>
 </ion-content>
