--- a/src/app/Auth/register/register.page.html
+++ b/src/app/Auth/register/register.page.html
@@ -1,4 +1,4 @@
-<ion-content class="ion-padding">
+<ion-content>
   <ion-card>
     <div class="registerTitle">
       <ion-label class="title">Registration</ion-label>
