--- a/src/app/Auth/login/login.page.scss
+++ b/src/app/Auth/login/login.page.scss
@@ -1,85 +1,71 @@
 ion-content{
-    --background: #0fccd3;
-    position: relative;
-
-    .header{
-        display: flex;
-        justify-content: space-between;
-        padding: 1rem 0.5rem;
-
-        ion-button{
-            height: 60px;
-            height: 60px;
-
-            ion-icon{
-                font-size: 2rem;
-            }
-        }
-    }
+    --background: linear-gradient(#12c2e9, #c471ed, #f64f59);
+    --padding-start:30px;
+    --padding-end: 30px;
+    --padding-top: 20px;
+    --padding-bottom: 20px;
 
     .card{
-        height: 75%;
-        width: 100%;
-        background: #fff;
-        position: absolute;
-        bottom: 0;
-        border-radius: 3rem 3rem 0 0;
-        padding: 2rem;
-
-        .image{
-            position: absolute;
-            top: -7rem;
-            width: 50%;
-            left: 50%;
-            transform: translateX(-50%);
-            margin: auto;
-            background: #0fccd3;
-            border-radius: 50%;
-            ion-img{
-                border-radius: 50%;
-                width: 100%;
-            }
-        }
-
-        .card-title{
-            margin-top: 35%;
+        .card-header{
             text-align: center;
-            align-items: center;
-            margin-bottom: 1.2rem;
-
             h1{
-                font-weight: 700;
-                font-size: 1.8rem;
+                color: #fff;
+                font-size: 1.4rem;
             }
+
             p{
-                font-size: 2rem;
-                font-weight: 700;
-                color: #df0dd4;
-
-                sup{
-                    font-size: 1.2rem;
-                    margin-left: 0.5rem;
-                }
+                color: #fff;
+                font-size: 1rem;
             }
         }
-
-        .rates{
-            display: flex;
-            align-items: center;
-            margin-bottom: 3rem;
-        }
-
-        .about{
-            margin-bottom: 2.5rem;
-
-            h1{
+        ion-item{
+            --background: transparent !important;
+            --padding-start: 0;
+    
+            ion-label{
                 font-weight: 600;
             }
-            p{
-                font-size: 1.1rem;
-                line-height: 1.6;
-                color: #b9b9b9;
+        }
+    
+        .forgotPass{
+            color: #FFF;
+            text-transform: none;
+            font-weight: 600;
+        }
+        ion-button{
+            text-transform: uppercase;
+            font-weight: 600;
+        }
+        .text-center{
+            text-align: center;
+        }
+        .btnFlex{
+            display: flex;justify-content: space-between;
+    
+            .btnGoogle{
+                --background: rgb(173, 10, 10);
             }
         }
     }
+    .logo{
+        position: relative;
+        height: 150px;
+        width: 150px;
+        border: 2px solid #fff;
+        border-radius: 50%;
+        top: 10%;
+        left: 50%;
+        margin-top: 3rem;
+        transform: translate(-50%, -50%);
+
+        ion-icon{
+            font-size: 7rem;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+    }
+
+    
 }
