--- a/src/app/components/popover/popover.component.html
+++ b/src/app/components/popover/popover.component.html
@@ -4,7 +4,7 @@
     <ion-label>Mon profile</ion-label>
   </ion-item>
   
-  <ion-item (click)="onClick2( )" detail>
+  <ion-item (click)="logOut( )" detail>
     <ion-icon slot="start" name="log-out"></ion-icon>
     <ion-label>Deconnecter</ion-label>
   </ion-item>
