--- a/src/app/Auth/register/register.page.scss
+++ b/src/app/Auth/register/register.page.scss
@@ -6,9 +6,12 @@ ion-content{
     --padding-bottom: 20px;
     .btnBack{
         top: 0;
-
+        
         .iconBack{
             margin-right: 3px;
+        }
+        ion-button{
+            text-transform: none;
         }
     }
     .card{
