--- a/src/app/Auth/forgot-password/forgot-password.page.html
+++ b/src/app/Auth/forgot-password/forgot-password.page.html
@@ -1,3 +1,39 @@
 <ion-content>
-
-</ion-content>
+    <div class="header">
+      <ion-buttons>
+        <ion-button routerLink="/profile">
+          <ion-icon slot="icon-only" color="light" name="arrow-back"></ion-icon>
+        </ion-button>
+      </ion-buttons>
+      <ion-buttons>
+        <ion-button>
+          <ion-icon slot="icon-only" color="light" name="heart"></ion-icon>
+        </ion-button>
+      </ion-buttons>
+    </div>
+    <div class="logo">
+      <ion-icon color="light" name="speedometer"></ion-icon>
+    </div>
+    <div class="card">
+      <div class="card-header">
+        <h1 class="title">Bienvenue</h1>
+        <p>Mot de passe oublier?</p>
+      </div>
+      <div class="card-content">
+        <form>
+          
+          <ion-item>
+            <ion-label color="light" position="floating">Adresse email</ion-label>
+            <ion-input color="light" required type="email" [(ngModel)]="email" name="email"></ion-input>
+          </ion-item>
+          
+          
+          <div class="action-button">
+            <ion-button shape="round" color="primary" expand="block" (click)="resetPassword()">Recuperer votre compte</ion-button>
+          </div>
+          
+        </form>
+      </div>
+    </div>
+  </ion-content>
+  
