--- a/src/app/Auth/forgot-password/forgot-password.page.scss
+++ b/src/app/Auth/forgot-password/forgot-password.page.scss
@@ -4,11 +4,18 @@ ion-content{
     --padding-end: 30px;
     --padding-top: 20px;
     --padding-bottom: 20px;
-    .btnBack{
-        top: 0;
+    .header{
+        display: flex;
+        justify-content: space-between;
+        padding: 1rem 0.5rem;
 
-        .iconBack{
-            margin-right: 3px;
+        ion-button{
+            height: 60px;
+            height: 60px;
+
+            ion-icon{
+                font-size: 2rem;
+            }
         }
     }
     .card{
@@ -33,28 +40,10 @@ ion-content{
             }
         }
     
-        .forgotPass{
-            color: #FFF;
-            text-transform: uppercase;
-            font-weight: 600;
-        }
         .action-button{
             margin-top: 2rem;
         }
-        ion-button{
-            text-transform: uppercase;
-            font-weight: 600;
-        }
-        .text-center{
-            text-align: center;
-        }
-        .btnFlex{
-            display: flex;justify-content: space-between;
-    
-            .btnGoogle{
-                --background: rgb(173, 10, 10);
-            }
-        }
+        
     }
     .logo{
         position: relative;
